--- a/AuctionService/appsettings.Development.json
+++ b/AuctionService/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=auction"
+  },
+  "Cloudinary": {
+    "CloudName": "dsceyl414",
+    "ApiKey": "473543669657924",
+    "ApiSecret": "1iGe5fE7Q4i_Wn8qKjQ_KSSXSLA"
   }
+  
 }
