--- a/SearchService/SearchService.csproj
+++ b/SearchService/SearchService.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.0" />
       <PackageReference Include="MongoDB.Entities" Version="23.0.1" />
     </ItemGroup>
 </Project>
