--- a/SearchService/appsettings.Development.json
+++ b/SearchService/appsettings.Development.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "MongoDbConnections": "mongodb://mongo:mongopw@localhost:27017"
   },
-  "AuctionServiceUrl": "http://localhost:7001"
+  "AuctionServiceUrl": "http://localhost:7001",
+  "RabbitMq": {
+    "Host": "localhost"
+  }
 }
