--- a/art-elevate/package.json
+++ b/art-elevate/package.json
@@ -19,7 +19,9 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.299.0",
     "next": "14.0.4",
+    "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
     "react-dom": "^18",
