--- a/art-elevate/package.json
+++ b/art-elevate/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.299.0",
     "next": "14.0.4",
     "next-auth": "^4.22.1",
@@ -24,11 +30,16 @@
     "query-string": "^8.1.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
+    "react-spinners": "^0.13.8",
+    "sonner": "^1.2.4",
     "swiper": "^11.0.5",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
