--- a/AuctionService/AuctionService.csproj
+++ b/AuctionService/AuctionService.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
         <PackageReference Include="CloudinaryDotNet" Version="1.24.0"/>
+        <PackageReference Include="Grpc.AspNetCore" Version="2.59.0" />
         <PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.1.2" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
@@ -20,5 +21,9 @@
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Contracts\Contracts.csproj" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <ProtoBuf Include="protos/auctions.proto" GrpcServices="Server"/>
     </ItemGroup>
 </Project>
