--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,14 +29,20 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:80
+      - ASPNETCORE_URLS=http://+:7777
       - RabbitMq__Host=rabbitmq
       - Cloudinary__CloudName=dsceyl414
       - Cloudinary__ApiKey=473543669657924
       - Cloudinary__ApiSecret=1iGe5fE7Q4i_Wn8qKjQ_KSSXSLA
       - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=postgrespw;Database=auction
       - IdentityServiceUrl=http://identity-svc
+      - Kestrel__Endpoints__Grpc__Protocols=Http2
+      - Kestrel__Endpoints__Grpc__Url=http://+:7777
+      - Kestrel__Endpoints__WebApi__Protocols=Http1
+      - Kestrel__Endpoints__WebApi__Url=http://+:80
     ports:
       - 7001:80
+      - 7777:7777
     depends_on: 
       - postgres
       - rabbitmq
@@ -49,7 +55,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:80
       - RabbitMq__Host=rabbitmq
-      - ConnectionStrings__MongoDbConnections=mongodb://mongo:mongopw@mongodb:27017
+      - ConnectionStrings__MongoDbConnection=mongodb://mongo:mongopw@mongodb:27017
       - AuctionServiceUrl=http://auction-svc
     ports:
       - 7002:80
@@ -80,3 +86,20 @@ services:
       - ASPNETCORE_URLS=http://+:80
     ports:
       - 6001:80
+  bid-svc:
+    image: duynguyenbui/bid-svc:latest
+    build:
+      context: .
+      dockerfile: BiddingService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - RabbitMq__Host=rabbitmq
+      - ConnectionStrings__BidDbConnection=mongodb://mongo:mongopw@mongodb:27017
+      - IdentityServiceUrl=http://identity-svc
+      - GrpcAuction=http://auction-svc:7777
+    ports:
+      - 7003:80
+    depends_on:
+      - mongodb
+      - rabbitmq
