Adding Notification Service SignalR

--- a/GatewayService/appsettings.json
+++ b/GatewayService/appsettings.json
@@ -70,6 +70,13 @@
             "PathPattern": "api/bids/{**catch-all}"
           }
         ]
+      },
+      "notifications": {
+        "ClusterId": "notifications",
+        "CorsPolicy": "clientPolicy",
+        "Match": {
+          "Path": "/notifications/{**catch-all}"
+        }
       }
     }
   }
