--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,3 +103,16 @@ services:
     depends_on:
       - mongodb
       - rabbitmq
+  notify-svc:
+    image: duynguyenbui/notify-svc:latest
+    build:
+      context: .
+      dockerfile: NotificationService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - RabbitMq__Host=rabbitmq
+    ports:
+      - 7004:80
+    depends_on:
+      - rabbitmq
