--- a/art-elevate/package.json
+++ b/art-elevate/package.json
@@ -35,6 +35,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "react-resizable-panels": "^1.0.4",
     "react-spinners": "^0.13.8",
     "sonner": "^1.2.4",
     "swiper": "^11.0.5",
