Finished Dev Enviroment

--- a/GatewayService/appsettings.json
+++ b/GatewayService/appsettings.json
@@ -38,7 +38,7 @@
         "ClusterId": "search",
         "Match": {
           "Path": "/search/{**catch-all}",
-          "Methods": ["GET"]
+          "Methods": ["GET", "OPTIONS"]
         },
         "Transforms": [
           {
