--- a/art-elevate/package.json
+++ b/art-elevate/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.11.2",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -37,6 +38,7 @@
     "react-hook-form": "^7.49.2",
     "react-resizable-panels": "^1.0.4",
     "react-spinners": "^0.13.8",
+    "sharp": "^0.33.1",
     "sonner": "^1.2.4",
     "swiper": "^11.0.5",
     "swr": "^2.2.4",
