--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,8 @@
+#networks:
+#  custom:
+#    ipam:
+#      config:
+#        - subnet: 10.5.0.0/16
 services: 
   postgres:
     image: postgres
@@ -7,6 +12,8 @@ services:
       - 5432:5432
     volumes:
       - /var/lib/postgresql/data
+#    networks: 
+#      custom:
   mongodb:
     image: mongo
     environment:
@@ -16,11 +23,15 @@ services:
       - 27017:27017
     volumes:
       - /var/lib/mongodb/data
+#    networks:
+#      custom:
   rabbitmq:
     image: rabbitmq:3-management-alpine
     ports:
       - 5672:5672
       - 15672:15672
+#    networks:
+#      custom:
   auction-svc:
     image: duynguyenbui/auction-svc:latest
     build:
@@ -46,6 +57,8 @@ services:
     depends_on: 
       - postgres
       - rabbitmq
+#    networks:
+#      custom:
   search-svc:
     image: duynguyenbui/search-svc:latest
     build:
@@ -62,6 +75,8 @@ services:
     depends_on:
       - mongodb
       - rabbitmq
+#    networks:
+#      custom:
   identity-svc:
     image: duynguyenbui/identity-svc:latest
     build:
@@ -76,6 +91,9 @@ services:
       - 5000:80
     depends_on: 
       - postgres
+#    networks:
+#      custom:
+#        ipv4_address: 10.5.0.200 
   gateway-svc:
     image: duynguyenbui/gateway-svc:latest
     build:
@@ -86,6 +104,8 @@ services:
       - ASPNETCORE_URLS=http://+:80
     ports:
       - 6001:80
+#    networks: 
+#      custom:
   bid-svc:
     image: duynguyenbui/bid-svc:latest
     build:
@@ -103,6 +123,8 @@ services:
     depends_on:
       - mongodb
       - rabbitmq
+#    networks:
+#      custom:
   notify-svc:
     image: duynguyenbui/notify-svc:latest
     build:
@@ -116,3 +138,24 @@ services:
       - 7004:80
     depends_on:
       - rabbitmq
+#  web-app:
+#    image: duynguyenbui/web-app:latest
+#    build:
+#      context: .
+#      dockerfile: art-elevate/Dockerfile
+#    volumes:
+#      - /var/lib/web/data
+#    ports:
+#      - 3000:3000
+#    extra_hosts: 
+#      - id.artelevate.com:10.5.0.200
+#    environment:
+#      - API_SERVER_URL=http://gateway-svc
+#      - IDENTITY_SERVER_URL=http://id.artelevate.com
+#      - NEXTAUTH_SECRET=78zFZvyspgAIBXPKdA0AhFqcNWXX16/CEmBFOHU3iOg=
+#      - NEXTAUTH_URL=http://localhost:3000
+#      - NEXTAUTH_URL_INTERNAL=http://web-app:3000
+#      - NEXT_PUBLIC_NOTIFY_URL=http://gateway-svc/notifications
+#      - NEXT_PUBLIC_API_SERVER_URL=http://gateway-svc
+#    networks:
+#      custom:
