Finished Docker in Production Image

--- a/GatewayService/appsettings.json
+++ b/GatewayService/appsettings.json
@@ -73,7 +73,7 @@
       },
       "notifications": {
         "ClusterId": "notifications",
-        "CorsPolicy": "clientPolicy",
+        "CorsPolicy": "customPolicy",
         "Match": {
           "Path": "/notifications/{**catch-all}"
         }
