--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-#networks:
-#  custom:
-#    ipam:
-#      config:
-#        - subnet: 10.5.0.0/16
+networks:
+  custom:
+    ipam:
+      config:
+        - subnet: 10.5.0.0/16
 services: 
   postgres:
     image: postgres
@@ -12,8 +12,8 @@ services:
       - 5432:5432
     volumes:
       - /var/lib/postgresql/data
-#    networks: 
-#      custom:
+    networks: 
+      custom:
   mongodb:
     image: mongo
     environment:
@@ -23,15 +23,15 @@ services:
       - 27017:27017
     volumes:
       - /var/lib/mongodb/data
-#    networks:
-#      custom:
+    networks:
+      custom:
   rabbitmq:
     image: rabbitmq:3-management-alpine
     ports:
       - 5672:5672
       - 15672:15672
-#    networks:
-#      custom:
+    networks:
+      custom:
   auction-svc:
     image: duynguyenbui/auction-svc:latest
     build:
@@ -57,8 +57,8 @@ services:
     depends_on: 
       - postgres
       - rabbitmq
-#    networks:
-#      custom:
+    networks:
+      custom:
   search-svc:
     image: duynguyenbui/search-svc:latest
     build:
@@ -75,8 +75,8 @@ services:
     depends_on:
       - mongodb
       - rabbitmq
-#    networks:
-#      custom:
+    networks:
+      custom:
   identity-svc:
     image: duynguyenbui/identity-svc:latest
     build:
@@ -86,14 +86,13 @@ services:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
       - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=postgrespw;Database=identity
-      - ClientApp=http://localhost:3000
-    ports:
-      - 5000:80
+      - ClientApp=http://app.artelevate.com
+      - VIRTUAL_HOST=id.artelevate.com
     depends_on: 
       - postgres
-#    networks:
-#      custom:
-#        ipv4_address: 10.5.0.200 
+    networks:
+      custom:
+        ipv4_address: 10.5.0.200 
   gateway-svc:
     image: duynguyenbui/gateway-svc:latest
     build:
@@ -102,10 +101,10 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
-    ports:
-      - 6001:80
-#    networks: 
-#      custom:
+      - ClientApp=https://app.artelevate.com
+      - VIRTUAL_HOST=api.artelevate.com
+    networks: 
+      custom:
   bid-svc:
     image: duynguyenbui/bid-svc:latest
     build:
@@ -123,8 +122,8 @@ services:
     depends_on:
       - mongodb
       - rabbitmq
-#    networks:
-#      custom:
+    networks:
+      custom:
   notify-svc:
     image: duynguyenbui/notify-svc:latest
     build:
@@ -138,24 +137,36 @@ services:
       - 7004:80
     depends_on:
       - rabbitmq
-#  web-app:
-#    image: duynguyenbui/web-app:latest
-#    build:
-#      context: .
-#      dockerfile: art-elevate/Dockerfile
-#    volumes:
-#      - /var/lib/web/data
-#    ports:
-#      - 3000:3000
-#    extra_hosts: 
-#      - id.artelevate.com:10.5.0.200
-#    environment:
-#      - API_SERVER_URL=http://gateway-svc
-#      - IDENTITY_SERVER_URL=http://id.artelevate.com
-#      - NEXTAUTH_SECRET=78zFZvyspgAIBXPKdA0AhFqcNWXX16/CEmBFOHU3iOg=
-#      - NEXTAUTH_URL=http://localhost:3000
-#      - NEXTAUTH_URL_INTERNAL=http://web-app:3000
-#      - NEXT_PUBLIC_NOTIFY_URL=http://gateway-svc/notifications
-#      - NEXT_PUBLIC_API_SERVER_URL=http://gateway-svc
-#    networks:
-#      custom:
+    networks: 
+      - custom
+  web-app:
+    image: duynguyenbui/web-app:latest
+    build:
+      context: .
+      dockerfile: art-elevate/Dockerfile
+    volumes:
+      - /var/lib/web/data
+    extra_hosts:
+      - id.artelevate.com:10.5.0.200
+    environment:
+      - API_SERVER_URL=http://gateway-svc
+      - IDENTITY_SERVER_URL=http://id.artelevate.com
+      - NEXTAUTH_SECRET=somethingreallyreallysecret
+      - NEXTAUTH_URL=http://app.artelevate.com
+      - NEXTAUTH_URL_INTERNAL=http://web-app:3000
+      - NEXT_PUBLIC_NOTIFY_URL=http://gateway-svc/notifications
+      - NEXT_PUBLIC_API_SERVER_URL=http://gateway-svc
+      - VIRTUAL_HOST=app.artelevate.com
+      - VIRTUAL_PORT=3000
+    networks:
+      custom:
+  nginx-proxy:
+    image: nginxproxy/nginx-proxy
+    ports:
+      - 80:80
+      - 443:443
+    networks: 
+      custom:
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./devcerts:/etc/nginx/certs
