--- a/AuctionService/AuctionService.csproj
+++ b/AuctionService/AuctionService.csproj
@@ -18,6 +18,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0"/>
+        <PackageReference Include="Polly" Version="8.2.0" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Contracts\Contracts.csproj" />
