--- a/BiddingService/BiddingService.csproj
+++ b/BiddingService/BiddingService.csproj
@@ -19,6 +19,7 @@
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.2" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
       <PackageReference Include="MongoDB.Entities" Version="23.0.1" />
+      <PackageReference Include="Polly" Version="8.2.0" />
     </ItemGroup>
 
     <ItemGroup>
