--- a/.github/workflows/deploy-identity.yml
+++ b/.github/workflows/deploy-identity.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Login to docker hub
         uses: docker/login-action@v2
         with: 
-          username: ${{ secret.DOCKERHUB_USERNAME }}
-          password: ${{ secret.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Build and push the Docker image
         uses: docker/build-push-action@v3
         with:
