--- a/GatewayService/appsettings.json
+++ b/GatewayService/appsettings.json
@@ -9,11 +9,13 @@
   "ClientApp": "http://localhost:3000",
   "ReverseProxy": {
     "Routes": {
-      "auctionsRead" : {
+      "auctionsRead": {
         "ClusterId": "auctions",
         "Match": {
           "Path": "/auctions/{**catch-all}",
-          "Methods": ["GET"]
+          "Methods": [
+            "GET"
+          ]
         },
         "Transforms": [
           {
@@ -21,12 +23,16 @@
           }
         ]
       },
-      "auctionsWrite" : {
+      "auctionsWrite": {
         "ClusterId": "auctions",
         "AuthorizationPolicy": "default",
         "Match": {
           "Path": "/auctions/{**catch-all}",
-          "Methods": ["POST", "PATCH", "DELETE"]
+          "Methods": [
+            "POST",
+            "PATCH",
+            "DELETE"
+          ]
         },
         "Transforms": [
           {
@@ -38,7 +44,10 @@
         "ClusterId": "search",
         "Match": {
           "Path": "/search/{**catch-all}",
-          "Methods": ["GET", "OPTIONS"]
+          "Methods": [
+            "GET",
+            "OPTIONS"
+          ]
         },
         "Transforms": [
           {
@@ -46,12 +55,14 @@
           }
         ]
       },
-      "bidsWrite":{
+      "bidsWrite": {
         "ClusterId": "bids",
         "Authorization": "default",
         "Match": {
           "Path": "/bids",
-          "Methods": ["POST"]
+          "Methods": [
+            "POST"
+          ]
         },
         "Transforms": [
           {
@@ -59,11 +70,13 @@
           }
         ]
       },
-      "bidsRead":{
+      "bidsRead": {
         "ClusterId": "bids",
         "Match": {
           "Path": "/bids/{**catch-all}",
-          "Methods": ["GET"]
+          "Methods": [
+            "GET"
+          ]
         },
         "Transforms": [
           {
@@ -76,6 +89,36 @@
         "CorsPolicy": "customPolicy",
         "Match": {
           "Path": "/notifications/{**catch-all}"
+        }
+      }
+    },
+    "Clusters": {
+      "auctions": {
+        "Destinations": {
+          "auctionApi": {
+            "Address": "http://auction-clusterip"
+          }
+        }
+      },
+      "search": {
+        "Destinations": {
+          "searchApi": {
+            "Address": "http://search-clusterip"
+          }
+        }
+      },
+      "bids": {
+        "Destinations": {
+          "bidApi": {
+            "Address": "http://bid-clusterip"
+          }
+        }
+      },
+      "notifications": {
+        "Destinations": {
+          "notifyApi": {
+            "Address": "http://notify-clusterip"
+          }
         }
       }
     }
