--- a/infra/K8S/mongo-depl.yml
+++ b/infra/K8S/mongo-depl.yml
@@ -12,18 +12,18 @@ spec:
         app: mongo
     spec:
       containers:
-        - name: mongo
-          image: mongo
-          env:
-            - name: MONGO_INITDB_ROOT_USERNAME
-              value: mongo
-            - name: MONGO_INITDB_ROOT_PASSWORD
-              value: mongopw
-          ports:
-            - containerPort: 27017
-          volumeMounts:
-            - mountPath: /var/data/mongo
-              name: mongodata
+      - name: mongo
+        image: mongo
+        env:
+          - name: MONGO_INITDB_ROOT_USERNAME
+            value: root
+          - name: MONGO_INITDB_ROOT_PASSWORD
+            value: mongopw
+        ports:
+        - containerPort: 27017
+        volumeMounts: 
+        - mountPath: /var/data/mongo
+          name: mongodata
       volumes:
         - name: mongodata
           persistentVolumeClaim:
@@ -38,8 +38,8 @@ spec:
   selector:
     app: mongo
   ports:
-    - port: 27017
-      targetPort: 27017
+  - port: 27017
+    targetPort: 27017
 ---
 apiVersion: v1
 kind: Service
@@ -50,5 +50,5 @@ spec:
   selector:
     app: mongo
   ports:
-    - port: 27017
-      targetPort: 27017
+  - port: 27017
+    targetPort: 27017
