--- a/infra/K8S/ingress-svc.yml
+++ b/infra/K8S/ingress-svc.yml
@@ -22,7 +22,7 @@ spec:
             name: webapp-clusterip
             port: 
               number: 3000
-  - host: api.carsties.com
+  - host: api.artelevate.com
     http:
       paths:
       - pathType: Prefix
@@ -32,4 +32,3 @@ spec:
             name: gateway-clusterip
             port: 
               number: 80
-
