--- a/infra/dashboard/components.yaml
+++ b/infra/dashboard/components.yaml
@@ -134,9 +134,8 @@ spec:
       - args:
         - --cert-dir=/tmp
         - --secure-port=4443
+        - --kubelet-insecure-tls
         - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
-        - --kubelet-use-node-status-port
-        - --metric-resolution=15s
         image: registry.k8s.io/metrics-server/metrics-server:v0.6.4
         imagePullPolicy: IfNotPresent
         livenessProbe:
