--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -162,6 +162,13 @@ services:
       - VIRTUAL_PORT=3000
     networks:
       custom:
+  portainer:
+    image: portainer/portainer-ce
+    ports:
+      - 8000:8000
+      - 9000:9000
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
   prometheus:
     image: prom/prometheus:v2.36.2
     volumes:
